# notepad-minus-minus

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: main.rs
src/models/: event.rs  file_system.rs  files.rs  historyevent.rs  mod.rs  network.rs  panels.rs  sessions.rs  tabs.rs  terminal_state.rs  text.rs
src/views/: dialogs.rs  edit_history.rs  editor.rs  fileexplorer.rs  find_replace.rs  mod.rs  sessionexplorer.rs  side_panel.rs  tabs.rs  terminal.rs
src/views/dialogs/: error.rs  fs_operations.rs  mod.rs
src/views/file_explorer/: context_menu.rs  dialogs.rs  directory.rs  file.rs  file_explorer.rs  mod.rs
